Add in matrix table

--- a/scripts/HGDP_1KG_HailExploration.ipynb
+++ b/scripts/HGDP_1KG_HailExploration.ipynb
@@ -385,12 +385,22 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "informative-buffer",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "mt = hl.read_matrix_table(\"gs://gcp-public-data--gnomad/release/3.1/mt/genomes/gnomad.genomes.v3.1.hgdp_1kg_subset_dense.mt\")"
+   ]
+  },
+  {
    "source": [
     "Let's first explore the Hail matrix table by seeing how many rows (variants) and columns (samples) we have. "
-   ]
+   ],
+   "cell_type": "code",
+   "metadata": {},
+   "execution_count": null,
+   "outputs": []
   },
   {
    "cell_type": "code",
