--- a/scripts/HGDP_1KG_HailExploration.ipynb
+++ b/scripts/HGDP_1KG_HailExploration.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# Hail PCA Exploration on HGDP + 1KG data\n",
     "\n",
-    "In this quick exploration of the HGDP + 1KG data, I explore some of the functions I will be using later on for different datasets. While this pipeline is not comprehensive in it's QC, it mainly serves as an exploration of the data and a way to become more familiar with Hail."
+    "In this quick exploration of the HGDP + 1KG data, I explore some of the functions I will be using later on for different datasets. While this pipeline is not comprehensive in its QC, it mainly serves as an exploration of the data and a way to become more familiar with Hail."
    ]
   },
   {
@@ -1229,7 +1229,7 @@
    "source": [
     "We can see that there are some outlier individuals with low call rates. From what I've read so far, choosing a call rate threshold is pretty variable, but [95% or higher](https://www.ncbi.nlm.nih.gov/pmc/articles/PMC3025522/) seems to be pretty good. In the gnomAD QC, a hard filter of call rates < 0.895 was given.\n",
     "\n",
-    "In addition to call rates, we can also check out gene quality. Let's view the mean gene quality for each individual."
+    "In addition to call rates, we can also check out genotype quality. Let's view the mean genotype quality for each individual."
    ]
   },
   {
@@ -1303,7 +1303,7 @@
    "id": "sudden-intervention",
    "metadata": {},
    "source": [
-    "We could (and should) filter out the low quality samples by, for example, removing samples that have a call rate less than 0.895 (as in the gnomadQC pipeline), however I found that after transforming the hail table matric to include the QC metrics, it's actually very computationally expensive to work on it (I still have yet to figure out why this is). So for now, we won't filter and will instead just practice using PCA on the data. If we were to filter, the command would be `mt = mt_qc.filter_cols((mt_qc.sample_qc.call_rate >= 0.895))`"
+    "We could (and should) filter out the low quality samples by, for example, removing samples that have a call rate less than 0.895 (as in the gnomadQC pipeline), however I found that after transforming the hail MatrixTable to include the QC metrics, it's actually very computationally expensive to work on it (I still have yet to figure out why this is). So for now, we won't filter and will instead just practice using PCA on the data. If we were to filter, the command would be `mt = mt_qc.filter_cols((mt_qc.sample_qc.call_rate >= 0.895))`"
    ]
   },
   {
