--- a/scripts/cellregmap/README
+++ b/scripts/cellregmap/README
@@ -1,1 +1,7 @@
-Run CellRegMap
+# CellRegMap analyses
+
+This repository contains the code to run CellRegMap on the OneK1K / TOB-WGS dataset.
+
+## References
+CellRegMap is described in the [CellRegMap manuscript](https://www.biorxiv.org/content/10.1101/2021.09.01.458524v1), 
+with software available at https://github.com/limix/CellRegMap/.
